[Framework] More flexible environment variables for JVM options